Revert "Assessment service"
This reverts commit 55c92cbdc572b97395c9a77bf84766f7c454bae7.